--- a/frontend/index.css
+++ b/frontend/index.css
@@ -1,6 +1,18 @@
 /* IMPORTS BEGIN */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap');
 
+@font-face {
+    font-family: 'icomoon';
+    src: url('fonts/icomoon.eot?i5dxsx');
+    src: url('fonts/icomoon.eot?i5dxsx#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?i5dxsx') format('truetype'),
+        url('fonts/icomoon.woff?i5dxsx') format('woff'),
+        url('fonts/icomoon.svg?i5dxsx#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+
 /* IMPORTS END*/
 
 /* GENERAL BEGIN */
@@ -21,6 +33,50 @@ body {
 }
 
 /* GENERAL END */
+
+/* ICONMOON */
+i {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-search:before {
+    content: "\e903";
+}
+
+.icon-star:before {
+    content: "\e902";
+    margin-right: 2px;
+}
+
+.icon-clock:before {
+    content: "\e900";
+    margin-right: 4px;
+}
+
+.icon-heart:before {
+    content: "\e901";
+    color: white;
+    position: absolute;
+    z-index: 999;
+    right: 23px;
+    top: 15px;
+    font-size: 35px;
+}
+
+
+
+/* ICONMOON END*/
 
 /* NAV BEGIN */
 #logoBackground {
@@ -106,7 +162,7 @@ body {
 }
 
 #formSearchbar::placeholder {
-    color: #313131;
+    color: #3131317e;
     font-size: 14px;
 }
 
