--- a/frontend/index.css
+++ b/frontend/index.css
@@ -119,12 +119,10 @@ i {
     text-decoration: none;
     font: 14px/21px Poppins;
     color: #313131;
-    transition: color 275ms ease;
 }
 
 #menu ul li a:hover {
     border-bottom: 2px solid #A2CE2A;
-    background-position: 0 100%;
 }
 
 
@@ -255,6 +253,7 @@ i {
     display: inline-block;
     width: 266px;
     height: 372px;
+    margin-bottom: 15px;
     margin-right: 15px;
     background: #FFFFFF;
     box-shadow: 0px 3px 6px #00000029;
@@ -354,8 +353,6 @@ i {
     width: 70vw;
     left: 25vw;
     top: 120px;
-    background-color: rgb(231, 231, 231);
-    box-shadow: 0px 3px 6px #00000029;
     border-radius: 44px;
 }
 
