--- a/frontend/index.css
+++ b/frontend/index.css
@@ -448,6 +448,7 @@ i {
 
 
 #recipeImage {
+    margin-left: 40px;
     width: 40%;
     border-radius: 44px;
     overflow: hidden;
@@ -459,15 +460,36 @@ i {
 }
 
 #recipeIngredients {
+
     width: 30%;
     display: inline-block;
     margin-left: 25px;
 }
 
 #recipe h2 {
+    font-size: 35px;
     text-align: center;
 }
 
 #recipeInstructions {
+    margin-left: 40px;
     width: 70%;
+}
+
+#recipeBackground {
+    margin-top: 20px;
+    border: 2px solid #A2CE2A;
+    width: 65%;
+    height: 80vh;
+    background-color: #ffffffc2;
+    box-shadow: 0px 3px 6px #00000029;
+    border-radius: 44px;
+}
+
+#recipeBack {
+    position: absolute;
+    height: 70px;
+    background-color: #A2CE2A;
+    width: 70px;
+    border-radius: 40px 0px 15px 0px;
 }
