--- a/frontend/index.css
+++ b/frontend/index.css
@@ -73,7 +73,7 @@ i {
     color: #fff;
     position: absolute;
     z-index: 999;
-    right: 23px;
+    right: 19px;
     top: 15px;
     font-size: 35px;
 }
@@ -195,7 +195,7 @@ i {
 
 #formFilter {
     float: left;
-    border: 1px solid #A2CE2A;
+    border: 1px solid #9ecc1f;
     background: #ffffff;
     border-radius: 44px;
     font: 14px/21px Poppins;
@@ -340,7 +340,8 @@ i {
 #filterDiv {
     position: absolute;
     height: 60vh;
-    width: 20vw;
+    margin-left: 5vw;
+    width: 18vw;
     top: 120px;
     background-color: #fff;
     box-shadow: 0px 3px 6px #00000029;
@@ -351,7 +352,7 @@ i {
     position: absolute;
     height: 85vh;
     width: 70vw;
-    left: 25vw;
+    left: 28vw;
     top: 120px;
     border-radius: 44px;
 }
@@ -488,8 +489,13 @@ i {
 
 #recipeBack {
     position: absolute;
-    height: 70px;
+    height: 60px;
     background-color: #A2CE2A;
-    width: 70px;
+    width: 60px;
     border-radius: 40px 0px 15px 0px;
+}
+
+#similarRecipes {
+    display: inline-block;
+    width: 20%;
 }
