--- a/frontend/index.css
+++ b/frontend/index.css
@@ -30,7 +30,19 @@ body {
     margin: 0px 30px;
     padding: 0;
     background-image: url(./images/background.jpg);
+    animation: animatedBackground 60s linear infinite;
 }
+
+@keyframes animatedBackground {
+    from {
+        background-position: right;
+    }
+
+    to {
+        background-position: top;
+    }
+}
+
 
 /* GENERAL END */
 
@@ -143,7 +155,7 @@ i {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    z-index: 99;
+    z-index: -1;
 }
 
 #formTitle {
@@ -250,7 +262,8 @@ i {
 /* CARD BEGIN */
 #card {
     display: inline-block;
-    width: 266px;
+    width: 23%;
+    max-width: 266px;
     height: 372px;
     margin-bottom: 15px;
     margin-right: 15px;
@@ -354,6 +367,7 @@ i {
     left: 28vw;
     top: 170px;
     border-radius: 44px;
+    z-index: 99;
 }
 
 
@@ -386,6 +400,7 @@ i {
     z-index: 999;
     margin: auto;
     overflow-y: scroll;
+    overflow-x: hidden;
     border-radius: 14px;
     padding-right: 5px;
 }
@@ -399,6 +414,9 @@ i {
     cursor: pointer;
 }
 
+#popup {
+    text-align: center;
+}
 
 .restaurantStyle {
     border: 2px solid #A2CE2A;
@@ -577,7 +595,7 @@ i {
     border-radius: 44px;
     font: 14px/21px Poppins;
     color: #313131;
-    width: 89px;
+    width: 22%;
     margin-top: 3px;
     margin-left: 8px;
 }
