--- a/frontend/index.css
+++ b/frontend/index.css
@@ -279,20 +279,10 @@ i {
     border-radius: 44px;
 }
 
-#cardInfoStars {
-    position: absolute;
-    top: 28%;
-    right: 5%;
-    width: 50px;
-    height: 20px;
-    background: #A2CE2A;
-    box-shadow: 0px 3px 6px #00000029;
-    border-radius: 44px;
-}
 
 #cardInfoTime {
     position: absolute;
-    top: 40%;
+    top: 27%;
     right: 5%;
     width: 50px;
     height: 20px;
@@ -431,6 +421,7 @@ i {
     border-radius: 14px;
     background-color: #fff;
     overflow-y: visible;
+    position: relative;
 }
 
 .restaurantStyle:hover {
@@ -459,6 +450,17 @@ i {
     margin: 0px;
 }
 
+.distance {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    margin: 0;
+    padding: 3px;
+    border: 1.5px solid #A2CE2A;
+    border-radius: 44px;
+    z-index: 99;
+
+}
 
 /* SCROLLBAR BEGIN */
 
