--- a/frontend/index.css
+++ b/frontend/index.css
@@ -210,6 +210,7 @@ i {
     background: #ffffff;
     border-radius: 44px;
     font: 14px/21px Poppins;
+    font-weight: 100;
     color: #313131;
     width: 89px;
     margin-left: 7px;
@@ -341,23 +342,24 @@ i {
 
 #filterDiv {
     position: absolute;
-    height: 40vh;
+    height: 42vh;
     margin-left: 5vw;
     width: 18vw;
     top: 120px;
     background-color: #fff;
     box-shadow: 0px 3px 6px #00000029;
-    border-radius: 44px;
+    border-radius: 15px;
 }
 
 #searchResults {
     position: absolute;
-    height: 85vh;
-    width: 70vw;
+    height: 80vh;
+    overflow-y: scroll;
+    width: 60vw;
     left: 28vw;
     top: 170px;
-    border-radius: 44px;
     z-index: 99;
+    padding-bottom: 30px;
 }
 
 
@@ -431,7 +433,6 @@ i {
 
 #restaurants .title {
     margin: 0;
-    color: #A2CE2A;
     font-weight: 600;
     text-decoration: none;
 }
@@ -441,10 +442,12 @@ i {
     font-weight: 200;
     padding: 0px;
     margin: 0px;
+    width: 80%;
 }
 
 .description {
     font-size: 14px;
+    color: rgb(160, 160, 160);
     font-weight: 600;
     padding: 0px;
     margin: 0px;
@@ -453,13 +456,16 @@ i {
 .distance {
     position: absolute;
     right: 5px;
-    top: 5px;
+    bottom: 3px;
     margin: 0;
-    padding: 3px;
+    padding: 2px 6px 1px 6px;
     border: 1.5px solid #A2CE2A;
+    background-color: #A2CE2A;
+    color: #FFFFFF;
     border-radius: 44px;
+    font-weight: 200;
+    font-size: 12px;
     z-index: 99;
-
 }
 
 /* SCROLLBAR BEGIN */
@@ -652,9 +658,18 @@ i {
 
 /* FORM END */
 
-#sortFilters,
-#filterFilters {
+
+
+#sortFilters h3,
+#filterFilters h3 {
     margin-left: 20px;
+}
+
+#sortFilters form,
+#filterFilters form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #sortFilters input[type="radio"],
@@ -666,12 +681,11 @@ i {
 
 #sortFilters label,
 #filterFilters label {
-    width: 80%;
-    text-align: center;
-    margin: auto;
-    display: inline-block;
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 4px;
-    margin-bottom: 10px;
     border: 1px solid #A2CE2A;
     border-radius: 44px;
 }
