--- a/frontend/index.css
+++ b/frontend/index.css
@@ -706,3 +706,32 @@ i {
     background-color: #A2CE2A;
     color: #ffffff;
 }
+
+#loader {
+    display: none;
+    width: 40px;
+    height: 40px;
+
+    border: 2px solid #f3f3f3;
+    border-top: 3px solid #A2CE2A;
+    border-radius: 100%;
+
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+
+    animation: spin 1s infinite linear;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
