--- a/frontend/index.css
+++ b/frontend/index.css
@@ -46,6 +46,43 @@ body {
 
 /* GENERAL END */
 
+/* LOGIN */
+
+#loginFormDiv {
+    margin: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 60vh;
+    width: 20vw;
+    border-radius: 44px;
+    background-color: #fff;
+    box-shadow: 0px 3px 6px #00000029;
+}
+
+#loginForm input {
+    display: block;
+    width: 300px;
+    height: 50px;
+    border: #A2CE2A 1px solid;
+    border-radius: 10px;
+}
+
+#signupLink {
+    font-size: 14px;
+    color: #A2CE2A;
+    font-weight: 200;
+}
+
+#signupLink a {
+    font-size: 14px;
+    color: #A2CE2A;
+    text-decoration: none;
+    font-weight: 700;
+}
+
+/* LOGIN END*/
+
 /* ICONMOON */
 i {
     /* use !important to prevent issues with browser extensions that change fonts */
@@ -95,7 +132,6 @@ i {
 /* ICONMOON END*/
 
 
-/* LOGIN */
 
 
 /* NAV BEGIN */
