--- a/frontend/index.css
+++ b/frontend/index.css
@@ -53,25 +53,47 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    height: 60vh;
-    width: 20vw;
+    margin-top: 15vh;
+    width: 500px;
     border-radius: 44px;
     background-color: #fff;
     box-shadow: 0px 3px 6px #00000029;
 }
 
+#loginFormDiv img {
+    height: 300px;
+    width: auto;
+    margin-top: 10%;
+    margin-bottom: 2%;
+}
+
 #loginForm input {
     display: block;
+    margin-bottom: 15px;
     width: 300px;
     height: 50px;
     border: #A2CE2A 1px solid;
     border-radius: 10px;
 }
 
+#loginForm input[type=submit] {
+    display: block;
+    margin-bottom: 15px;
+    width: 300px;
+    height: 50px;
+    background-color: #A2CE2A;
+    color: #ffffff;
+    border-radius: 10px;
+    font: 14px Poppins;
+}
+
 #signupLink {
+    margin: 0;
+    margin-bottom: 35px;
     font-size: 14px;
     color: #A2CE2A;
     font-weight: 200;
+    text-align: center;
 }
 
 #signupLink a {
