--- a/frontend/index.css
+++ b/frontend/index.css
@@ -30,7 +30,7 @@ body {
     margin: 0px 30px;
     padding: 0;
     background-image: url(./images/background.jpg);
-    animation: animatedBackground 60s linear infinite;
+    animation: animatedBackground 50s linear infinite;
 }
 
 @keyframes animatedBackground {
@@ -53,12 +53,14 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 15vh;
+    margin-top: 10vh;
     width: 500px;
     border-radius: 44px;
-    background-color: #fff;
-    box-shadow: 0px 3px 6px #00000029;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
+    background-color: rgba(255, 255, 255, 0.007);
+    backdrop-filter: blur(2px);
 }
+
 
 #loginFormDiv img {
     height: 300px;
@@ -69,12 +71,16 @@ body {
 
 #loginForm input {
     display: block;
-    margin-bottom: 15px;
     width: 300px;
     height: 50px;
     border: #A2CE2A 1px solid;
     border-radius: 10px;
 }
+
+#loginFormPassword {
+    margin-bottom: 15px;
+}
+
 
 #loginForm input[type=submit] {
     display: block;
@@ -85,6 +91,12 @@ body {
     color: #ffffff;
     border-radius: 10px;
     font: 14px Poppins;
+}
+
+#loginForm label {
+    margin: 0;
+    font: 13px Poppins;
+    padding: 0;
 }
 
 #signupLink {
