--- a/frontend/index.css
+++ b/frontend/index.css
@@ -57,8 +57,7 @@ body {
     width: 500px;
     border-radius: 44px;
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
-    background-color: rgba(255, 255, 255, 0.007);
-    backdrop-filter: blur(2px);
+    background-color: rgb(255, 255, 255);
 }
 
 
