--- a/frontend/index.css
+++ b/frontend/index.css
@@ -74,7 +74,7 @@ body {
     width: 300px;
     height: 20px;
     border: none;
-    border-bottom: #A2CE2A 1.5px solid;
+    border-bottom: #A2CE2A 1px solid;
 }
 
 #loginFormPassword {
@@ -99,7 +99,7 @@ body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
-    color: #A2CE2A;
+    color: #313131;
     padding: 0;
 }
 
@@ -221,7 +221,7 @@ i {
 #form {
     position: absolute;
     top: 0;
-    bottom: 40vh;
+    bottom: 36vh;
     left: 0;
     right: 0;
     display: flex;
@@ -328,9 +328,10 @@ i {
 /* FORM END */
 
 #favorites {
-    width: 97%;
     position: absolute;
     z-index: -99;
+    width: 93vw;
+    margin-left: 4vw;
     top: 55vh;
 }
 
@@ -427,7 +428,7 @@ i {
 #checkbox input[type="checkbox"] {
     height: 20px;
     width: 20px;
-    background-color: white;
+    background-color: rgb(213, 255, 159);
     position: relative;
     outline: none;
     transform: rotate(45deg);
@@ -437,7 +438,7 @@ i {
 #checkbox input[type="checkbox"]::before {
     position: absolute;
     content: "";
-    background-color: white;
+    background-color: rgb(213, 255, 159);
     height: 60%;
     width: 100%;
     top: -59%;
@@ -447,7 +448,7 @@ i {
 #checkbox input[type="checkbox"]::after {
     position: absolute;
     content: "";
-    background-color: white;
+    background-color: rgb(213, 255, 159);
     height: 60%;
     width: 100%;
     transform: rotate(-90deg);
@@ -652,7 +653,6 @@ i {
     box-shadow: 0px 3px 6px #00000029;
     border-radius: 44px;
     display: inline-block;
-
 }
 
 #recipeImage {
